<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.cofc.csci490.stockquotes_rugema.StockQuotesMainActivity">

    <TextView
        android:id="@+id/symblName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/symbol_name"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/symbolNameText"
        android:layout_width="216dp"
        android:layout_height="41dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="152dp"
        tools:layout_editor_absoluteY="1dp" />

    <TextView
        android:id="@+id/symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/symbol"
        tools:layout_editor_absoluteX="96dp"
        tools:layout_editor_absoluteY="61dp" />

    <TextView
        android:id="@+id/nameID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="98dp" />

    <TextView
        android:id="@+id/tradePriceID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trade_price"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="134dp" />

    <TextView
        android:id="@+id/lastTradeTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trade_time"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="166dp" />

    <TextView
        android:id="@+id/change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change"
        tools:layout_editor_absoluteX="94dp"
        tools:layout_editor_absoluteY="202dp" />

    <TextView
        android:id="@+id/weekRange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/week_range"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="236dp" />

</android.support.constraint.ConstraintLayout>
